feat: add pan, zoom and drag & drop using Angular CDK

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
           "error",
           {
             "type": "element",
-            "prefix": ["aor"],
+            "prefix": ["aor", "page"],
             "style": "kebab-case"
           }
         ],
