feat: create panzoom directive

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@custom-types/*": ["./src/app/types/*"],
       "@components/*": ["./src/app/components/*"],
       "@models/*": ["./src/app/models/*"],
-      "@directives/*": ["./src/app/directives/*"]
+      "@directives/*": ["./src/app/directives/*"],
+      "@pipes/*": ["./src/app/pipes/*"]
     }
   },
   "angularCompilerOptions": {
