feat: add dynamic component loading to elements content
- Rename MapObjectComponent to ElementContainerComponent.
- Create ElementContentComponent.
- Load dynamic component on ElementContentComponent by config
- Create SimpleElementComponent, SvgElementComponent and DefaultElementComponent.
- Create dynamic loader as a service with fallback component.
- Add Type config help on add new dynamic components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@components/*": ["./src/app/components/*"],
       "@models/*": ["./src/app/models/*"],
       "@directives/*": ["./src/app/directives/*"],
-      "@pipes/*": ["./src/app/pipes/*"]
+      "@pipes/*": ["./src/app/pipes/*"],
+      "@services/*": ["./src/app/services/*"]
     }
   },
   "angularCompilerOptions": {
